--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -2,10 +2,18 @@
 <body>
 <table border="1">
 <tr>
+ <th>Aug 30: </th><td>Downloadable data sets added after
+ videos using them  in the <a target="naya" href="videos.html">videos page</a>.
+                     </td>
+</tr>
+
+<tr>
  <th>Aug 25: </th><td>Added some <a target="naya" href="nminusr.html">further
  discussion</a> for Video 38 in the <a target="naya" href="videos.html">videos page</a>.
                      </td>
-</tr><tr>
+</tr>
+
+<tr>
  <th>Aug 21: </th><td>First bunch of student submitted pdf's
  uploaded. See the <a target="naya" href="videos.html">videos page</a>.
                      </td>
