--- a/lm2022/nminusr.html
+++ b/lm2022/nminusr.html
@@ -231,7 +231,7 @@ $$
 In other words, $\|\v Y_1\|^2 = \|\hv Y\|^2$, where $\hv Y
 = (\v v_1\bullet \v Y,...,\v v_k\bullet \v Y).$ Just a word of
 warning here: $\v Y_1$ is not the same as $\hv Y$ (as
-their lengths differ). But their norms are equal. Just
+their numbers of components differ). But their norms are equal. Just
 as $(x,y,0)$ and $(x,y).$
 <p></p>
 We may write $\hv Y$ as $P\v Y,$ where $P$ is
