--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -39,12 +39,14 @@ subset of the information present in the videos.
 <li>Video 18: <a href="https://youtu.be/JRcW7oy9_b0">Using R</a> [Pranav Nair](Aug 18)<a href="trans/v18.pdf">{pdf}</a>
 <li>Video 19: <a href="https://youtu.be/rAFA0ozQ28M">List of important steps</a> [Reetanjan Kali Roychowdhury](Aug 18)<a href="trans/v19.pdf">{pdf}</a>
 <blockquote><a href="ex1.html">Practice problem set 1</a></blockquote><h3> Second detailed example </h3><li>Video 20: <a href="https://youtu.be/a471E-zFCUE">Quadratic regression, I() notation</a> [Yakshith Naidu](Aug 18)<a href="trans/v20.pdf">{pdf}</a>
-<li>Video 21: <a href="https://youtu.be/7l6BGOtzfwk">Quadratic regression in R</a> [Yash Maurya](Aug 19)<a href="trans/v21.pdf">{pdf}</a>
+<li>Video 21: <a href="https://youtu.be/7l6BGOtzfwk">Quadratic
+regression in R</a> <a href="data/spring.csv">(data)</a> [Yash Maurya](Aug 19)<a href="trans/v21.pdf">{pdf}</a>
 <h3> Third detailed example </h3><li>Video 22: <a href="https://youtu.be/W1xSO94h5rg">Another spring example: control input</a> [Rajarshi Biswas](Aug 19)<a href="trans/v22.pdf">{pdf}</a>
 <li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)<a href="trans/v23.pdf">{pdf}</a>
-<li>Video 24: <a href="https://youtu.be/OWhOeSS4cC4">Data merging in R</a> [Rishi Dey Chowdhury](Aug 22)
-<li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> [Tarun Agarwal](Aug 22)
-<li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> [Vaibhav Makarand Sherkar](Aug 22)
+<li>Video 24: <a href="https://youtu.be/OWhOeSS4cC4">Data merging
+in R</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Rishi Dey Chowdhury](Aug 22)
+<li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Tarun Agarwal](Aug 22)
+<li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Vaibhav Makarand Sherkar](Aug 22)
 <h3> Exercises </h3><li>Video 27: <a href="https://youtu.be/pF2GMG6ZHkI">Exercises</a> [Arunsoumya Basu](Aug 23)
 <blockquote>Practice problem set 2: the exercises at the end of chapter 2 of Faraway.</blockquote>
 <h3> Gauss-Markov set up </h3><li>Video
@@ -66,10 +68,10 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <li>Video 41: <a href="https://youtu.be/N4M1JYxtofk">First parametrisation</a> [Avinandan Roy](Aug 29)
 <li>Video 42: <a href="https://youtu.be/0qlpiFbqdYw">Second parametrisation</a> [Anushka De](Aug 30)
 <li>Video 43: <a href="https://youtu.be/CaTtf_YOLpg">Different identifiability constraints</a> [Pranay Samadder](Aug 30)
-<li>Video 44: <a href="https://youtu.be/hEt-ySmOWVY">R session: preparing data</a> [Sanskar Lalwani](Aug 30)
-<li>Video 45: <a href="https://youtu.be/IqavSAd4crE">R session: fitting two parametrisations of the same model.</a> [Rahul Debnath](Aug 31)
-<li>Video 46: <a href="https://youtu.be/fQ9QP-DCoZY">R session: moving betweeen the two parametrisations.</a> [Mrinmoy Banik](Aug 31)
-<li>Video 47: <a href="https://youtu.be/pv9PztjtPpQ">R session: estimating sigma^2.</a> [Valay Ashish Shah](Aug 31)
+<li>Video 44: <a href="https://youtu.be/hEt-ySmOWVY">R session: preparing data</a> <a href="data/lec12data.csv">(data)</a> [Sanskar Lalwani](Aug 30)
+<li>Video 45: <a href="https://youtu.be/IqavSAd4crE">R session: fitting two parametrisations of the same model.</a> <a href="data/lec12data.csv">(data)</a> [Rahul Debnath](Aug 31)
+<li>Video 46: <a href="https://youtu.be/fQ9QP-DCoZY">R session: moving betweeen the two parametrisations.</a> <a href="data/lec12data.csv">(data)</a> [Mrinmoy Banik](Aug 31)
+<li>Video 47: <a href="https://youtu.be/pv9PztjtPpQ">R session: estimating sigma^2.</a> <a href="data/lec12data.csv">(data)</a> [Valay Ashish Shah](Aug 31)
 <h3> Two-factor model </h3><li>Video 48: <a href="https://youtu.be/XTgmiaCu7h0">2-way setup through agricultural example.</a> [Vaibhav Makarand Sherkar](Sep 1)
 <li>Video 49: <a href="https://youtu.be/5qgCYdOclB0">More examples</a> [Ritam Dey](Sep 1)
 <li>Video 50: <a href="https://youtu.be/d3EBTtEUz4Q">Interaction chart</a> [Srikar Babu Pilli](Sep 1)
@@ -78,9 +80,9 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <li>Video 53: <a href="https://youtu.be/vjoVwvKxgFM">Interaction chart and lm() of he same data in R.</a> [Arnab Modak](Sep 2)
 <li>Video 54: <a href="https://youtu.be/vpSuwLrQfhc">Non-parallel interaction chart. Cell means. Interaction term model.</a> [Arka Sinha](Sep 5)
 <li>Video 55: <a href="https://youtu.be/Lp1a9y62W_4">More discussion on the interaction model.</a> [Ritam Dey](Sep 5)
-<li>Video 56: <a href="https://youtu.be/dlKj8A7o2WY">Preparing data in R</a> [Abhisek Maiti](Sep 5)
-<li>Video 57: <a href="https://youtu.be/ZndYRsUkMdM">Exploring the data in R</a> [Progyan Sarkar](Sep 6)
-<li>Video 58: <a href="https://youtu.be/22mJ8xkGuMM">lm() in R.</a> [Avinandan Roy](Sep 6)
+<li>Video 56: <a href="https://youtu.be/dlKj8A7o2WY">Preparing data in R</a> <a href="data/lec16data.csv">(data)</a> [Abhisek Maiti](Sep 5)
+<li>Video 57: <a href="https://youtu.be/ZndYRsUkMdM">Exploring the data in R</a> <a href="data/lec16data.csv">(data)</a> [Progyan Sarkar](Sep 6)
+<li>Video 58: <a href="https://youtu.be/22mJ8xkGuMM">lm() in R.</a> <a href="data/lec16data.csv">(data)</a> [Avinandan Roy](Sep 6)
 <h3> More terminology </h3><li>Video 59: <a href="https://youtu.be/2ln6OIbTDmE">Control, placebo, blind, double blind</a> [Sounak Das](Sep 6)
 <li>Video 60: <a href="https://youtu.be/03XFSeJ5KKI">Confounding</a> [Srikar Babu Pilli](Sep 7)
 <li>Video 61: <a href="https://youtu.be/cgP4eXpHmEk">Blocking</a> [Samprit Chakraborty](Sep 7)
