--- a/lm2022/projects.html
+++ b/lm2022/projects.html
@@ -132,7 +132,7 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Projects">Projects</a>
+<a href="#Project">Project</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Estimating the frame rate of a video camera without using
@@ -154,7 +154,7 @@ screenshots</a>
 <hr/>
 
 <h1><a
-name="Projects">Projects</a></h1>
+name="Project">Project</a></h1>
 This course has one project carrying 10 marks.
 
 
