--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -44,16 +44,16 @@ regression in R</a> <a href="data/spring.csv">(data)</a> [Yash Maurya](Aug 19)<a
 <h3> Third detailed example </h3><li>Video 22: <a href="https://youtu.be/W1xSO94h5rg">Another spring example: control input</a> [Rajarshi Biswas](Aug 19)<a href="trans/v22.pdf">{pdf}</a>
 <li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)<a href="trans/v23.pdf">{pdf}</a>
 <li>Video 24: <a href="https://youtu.be/OWhOeSS4cC4">Data merging
-in R</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Rishi Dey Chowdhury](Aug 22)
-<li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Tarun Agarwal](Aug 22)
-<li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Vaibhav Makarand Sherkar](Aug 22)
-<h3> Exercises </h3><li>Video 27: <a href="https://youtu.be/pF2GMG6ZHkI">Exercises</a> [Arunsoumya Basu](Aug 23)
+in R</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Rishi Dey Chowdhury](Aug 22)<a href="trans/v24.pdf">{pdf}</a>
+<li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Tarun Agarwal](Aug 22)<a href="trans/v25.pdf">{pdf}</a>
+<li>Video 26: <a href="https://youtu.be/bG9CadgoeCU">Applying lm()</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Vaibhav Makarand Sherkar](Aug 22)<a href="trans/v26.pdf">{pdf}</a>
+<h3> Exercises </h3><li>Video 27: <a href="https://youtu.be/pF2GMG6ZHkI">Exercises</a> [Arunsoumya Basu](Aug 23)<a href="trans/v27.pdf">{pdf}</a>
 <blockquote>Practice problem set 2: the exercises at the end of chapter 2 of Faraway.</blockquote>
 <h3> Gauss-Markov set up </h3><li>Video
 28: <a href="https://youtu.be/abGBx4ZzLRo">Motivation for
-statistical assumptions</a> [Valay Ashish Shah](Aug 23)
-<li>Video 29: <a href="https://youtu.be/flKqwqqASEo">An example of measuring a bar</a> [Debabrata Sarkar](Aug 23)
-<li>Video 30: <a href="https://youtu.be/Gr2f4MlDtCg">GM model using the bar example</a> [Avinandan Roy](Aug 24)
+statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{pdf}</a>
+<li>Video 29: <a href="https://youtu.be/flKqwqqASEo">An example of measuring a bar</a> [Debabrata Sarkar](Aug 23)<a href="trans/v29.pdf">{pdf}</a>
+<li>Video 30: <a href="https://youtu.be/Gr2f4MlDtCg">GM model using the bar example</a> [Avinandan Roy](Aug 24)<a href="trans/v30.pdf">{pdf}</a>
 <li>Video 31: <a href="https://youtu.be/NSxMtYUHAhQ">Mean and var of LSQ (full col rank)</a> [Arunav Bhowmick](Aug 24)
 <li>Video 32: <a href="https://youtu.be/1BT719xZVu8">BLUE. GM theorem (full col rank)</a> [Srikar Babu Pilli](Aug 24)
 <li>Video 33: <a href="https://youtu.be/OpVIFxW0Gys">Geometric intuition</a> [Tarun Agarwal](Aug 25)
@@ -110,13 +110,13 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <h3> Gauss-Markov model </h3><li>Video 82: <a href="https://youtu.be/30GDLF3vJpE">Use of ONB</a> [Sirsha Dey](Sep 30)
 <li>Video 83: <a href="https://youtu.be/pgGNwhPa3GU">Proof of GM</a> [Arka Sinha](Sep 30)
 <li>Video 84: <a href="https://youtu.be/iejNxAhkPOc">UMVUE of sigma^2</a> [Avinandan Roy](Oct 3)
-<h3> Residuals </h3><li>Video 85: <a href="https://youtu.be/krTAqkcpAvY">Extra contribution of a part</a> [Samahriti Mukherjee](Oct 3)
+<h3> Residuals </h3><li>Video 85*: <a href="https://youtu.be/krTAqkcpAvY">Extra contribution of a part</a> [Samahriti Mukherjee](Oct 3)
 <li>Video 86: <a href="https://youtu.be/M-BY2mVV2Rg">R^2</a> [Abhisek Maiti](Oct 3)
 <li>Video 87: <a href="https://youtu.be/oFXJcjOg2JU">Problem with R^2</a> [Yakshith Naidu](Oct 4)
 <li>Video 88: <a href="https://youtu.be/NHST-e6kBzU">Adjusted R^2</a> [Shreeja Bhakat](Oct 4)
 <h3> Hypotheses testing </h3><li>Video 89: <a href="https://youtu.be/kvN7RhF36qw">Recap of hyp4</a> [Mrinmoy Banik](Oct 4)
 <li>Video 90: <a href="https://youtu.be/6CWV9nvL1Ko">LRT in general</a> [Semanti Dutta](Oct 5)
-<li>Video 91: <a href="https://youtu.be/uRT3HwlAyK0">LRT for linearm models</a> [Pranav Nair](Oct 5)
+<li>Video 91*: <a href="https://youtu.be/uRT3HwlAyK0">LRT for linearm models</a> [Pranav Nair](Oct 5)
 <li>Video 92: <a href="https://youtu.be/vWGlN_d8Qdw">Recap of chi-square</a> [Souvik Roy](Oct 5)
 <li>Video 93: <a href="https://youtu.be/UB3u8F1w9Yk">More recap</a> [Shibendra Kumar Singh](Oct 6)
 <li>Video 94: <a href="https://youtu.be/4bTut_h0UCU">Chi-square and projection</a> [Arunsoumya Basu](Oct 6)
@@ -127,7 +127,7 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)
 <h3> ANOVA table </h3><li>Video 99: <a href="https://youtu.be/HKbqdAJ7o1I">Orthogonality of columns</a> [Sanku Bhaskara Rahul](Oct 10)
 <li>Video 100: <a href="https://youtu.be/Qk7ncpLrJtI">Geometry</a> [Arunav Bhowmick](Oct 10)
 <li>Video 101: <a href="https://youtu.be/IfCYB6M1Wvo">ANOVA table</a> [Aytijhya Saha](Oct 10)
-<li>Video 102: <a href="https://youtu.be/IFCX1X1oNZQ">Why care?</a> [Prisha Reddy Bobbili](Oct 11)
+<li>Video 102*: <a href="https://youtu.be/IFCX1X1oNZQ">Why care?</a> [Prisha Reddy Bobbili](Oct 11)
 <h3> Multiple comparison </h3><li>Video 103: <a href="https://youtu.be/zu3fjvrECmw">False Discovery rate</a> [Sounak Das](Oct 11)
 <li>Video 104: <a href="https://youtu.be/UuDBf-MH04w">A simple example</a> [Samahriti Mukherjee](Oct 11)
 <li>Video 105: <a href="https://youtu.be/aVl6ff-Y7HQ">Bonferroni</a> [Rishi Dey Chowdhury](Oct 12)
