--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -155,30 +155,30 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 126: <a href="https://youtu.be/nqRq5Lmw16k">R lab</a> [Rahul Debnath](Oct 21)
 <li>Video 127: <a href="https://youtu.be/6ufkigOqmlU">Cook’s distance</a> [Souvik Roy](Oct 21)
 <li>Video 128: <a href="https://youtu.be/mFL8giveL1c">R lab</a> [Pranay Samadder](Oct 21)
-<h3> Multicollinearity </h3><li>Video 129: <a href="https://youtu.be/OdU9-C9O38g">Introduction</a> [Sirsha Dey](Oct 24)
-<li>Video 130: <a href="https://youtu.be/N-BdQ-z6ftE">Subset selection</a> [Sanku Bhaskara Rahul](Oct 24)
-<li>Video 131: <a href="https://youtu.be/FX8fR10obBc">Ridge regression</a> [Ishan Paul](Oct 24)
-<li>Video 132: <a href="https://youtu.be/PyIv14Jlk5k">Ridge: ad hoc and Bayes</a> [Manas Patnayakuni](Oct 25)
-<li>Video 133: <a href="https://youtu.be/B8vREv2XIFk">Ridge: soft and hard bounds</a> [Samprit Chakraborty](Oct 25)
-<li>Video 134: <a href="https://youtu.be/W1xbD0UF2Xc">Lasso</a> [Arghya Sarkar](Oct 25)
-<li>Video 135: <a href="https://youtu.be/Gmm39agaJRs">R lab: Creating data</a> [Saptarshi Sinha](Oct 26)
-<li>Video 136: <a href="https://youtu.be/D57pw4r0WSY">R lab: lars()</a> [Rahul Debnath](Oct 26)
-<li>Video 137: <a href="https://youtu.be/2TgvCHKJoMA">R lab: Lasso</a> [Nithya Dev Allamneni](Oct 26)
-<li>Video 138: <a href="https://youtu.be/8rbAvg7O3gk">R lab: subset selection</a> [Arghya Sarkar](Oct 27)
-<li>Video 139: <a href="https://youtu.be/0PLgKyHtBIk">R lab: step function</a> [Arnab Modak](Oct 27)
-<h3> Mixed Effects Models </h3><li>Video 140: <a href="https://youtu.be/nwEigrKbTzw">Hypotheses testing</a> [Prisha Reddy Bobbili](Oct 27)
-<li>Video 141: <a href="https://youtu.be/d0eypo48gZA">Bootstrapping</a> [Abhisek Maiti](Oct 28)
-<li>Video 142: <a href="https://youtu.be/H-fZRIlB98c">BLUP</a> [Tarun Agarwal](Oct 28)
-<li>Video 143: <a href="https://youtu.be/xBcp0CXvRrw">Henderson’s equations</a> [Shreeja Bhakat](Oct 28)
-<li>Video 144: <a href="https://youtu.be/eCewNuCjkVw">Preparing for R</a> [Reetanjan Kali Roychowdhury](Oct 31)
-<li>Video 145: <a href="https://youtu.be/gOeOH2HdTtI">Grouped data</a> [Anushka De](Oct 31)
-<li>Video 146: <a href="https://youtu.be/G_XYmOz-wkY">R syntax</a> [Samahriti Mukherjee](Oct 31)
-<li>Video 147: <a href="https://youtu.be/sct37HrcM3g">R lab: preparing data</a> [Sanku Bhaskara Rahul](Nov 1)
-<li>Video 148: <a href="https://youtu.be/fgTg0PI6w-k">R lab: Fitting</a> [Souvik Roy](Nov 1)
-<li>Video 149: <a href="https://youtu.be/oVIkaBk4t94">Parametric bootstrap</a> [Progyan Sarkar](Nov 1)
-<li>Video 150: <a href="https://youtu.be/DZMEIrk_z_E">Exception 1</a> [Rahul Debnath](Nov 2)
-<li>Video 151: <a href="https://youtu.be/VEaCspDF0DY">Exception 2</a> [Arka Sinha](Nov 2)
-<li>Video 152: <a href="https://youtu.be/ElD9d5O7lzo">Exception 3</a> [Manas Patnayakuni](Nov 2)
-<h3> Generalised Linear Models </h3><li>Video 153: <a href="https://youtu.be/rP6-blNNVAs">Math formulation</a> [Yash Maurya](Nov 3)
-<li>Video 154: <a href="https://youtu.be/dsLp4yE_zoY">R lab</a> [Rishi Dey Chowdhury](Nov 3)
+<h3> Multicollinearity </h3><li>Video 129: <a href="https://youtu.be/OdU9-C9O38g">Introduction</a> [Sirsha Dey](Oct 24)<a href="trans/v129.pdf">{pdf}</a>
+<li>Video 130: <a href="https://youtu.be/N-BdQ-z6ftE">Subset selection</a> [Sanku Bhaskara Rahul](Oct 24)<a href="trans/v130.pdf">{pdf}</a>
+<li>Video 131: <a href="https://youtu.be/FX8fR10obBc">Ridge regression</a> [Ishan Paul](Oct 24)<a href="trans/v131.pdf">{pdf}</a>
+<li>Video 132: <a href="https://youtu.be/PyIv14Jlk5k">Ridge: ad hoc and Bayes</a> [Manas Patnayakuni](Oct 25)<a href="trans/v132.pdf">{pdf}</a>
+<li>Video 133: <a href="https://youtu.be/B8vREv2XIFk">Ridge: soft and hard bounds</a> [Samprit Chakraborty](Oct 25)<a href="trans/v133.pdf">{pdf}</a>
+<li>Video 134: <a href="https://youtu.be/W1xbD0UF2Xc">Lasso</a> [Arghya Sarkar](Oct 25)<a href="trans/v134.pdf">{pdf}</a>
+<li>Video 135: <a href="https://youtu.be/Gmm39agaJRs">R lab: Creating data</a> [Saptarshi Sinha](Oct 26)<a href="trans/v135.pdf">{pdf}</a>
+<li>Video 136: <a href="https://youtu.be/D57pw4r0WSY">R lab: lars()</a> [Rahul Debnath](Oct 26)<a href="trans/v136.pdf">{pdf}</a>
+<li>Video 137: <a href="https://youtu.be/2TgvCHKJoMA">R lab: Lasso</a> [Nithya Dev Allamneni](Oct 26)<a href="trans/v137.pdf">{pdf}</a>
+<li>Video 138: <a href="https://youtu.be/8rbAvg7O3gk">R lab: subset selection</a> [Arghya Sarkar](Oct 27)<a href="trans/v138.pdf">{pdf}</a>
+<li>Video 139: <a href="https://youtu.be/0PLgKyHtBIk">R lab: step function</a> [Arnab Modak](Oct 27)<!a href="trans/v139.pdf">{pdf}</a>
+<h3> Mixed Effects Models </h3><li>Video 140: <a href="https://youtu.be/nwEigrKbTzw">Hypotheses testing</a> [Prisha Reddy Bobbili](Oct 27)<a href="trans/v140.pdf">{pdf}</a>
+<li>Video 141: <a href="https://youtu.be/d0eypo48gZA">Bootstrapping</a> [Abhisek Maiti](Oct 28)<a href="trans/v141.pdf">{pdf}</a>
+<li>Video 142: <a href="https://youtu.be/H-fZRIlB98c">BLUP</a> [Tarun Agarwal](Oct 28)<a href="trans/v142.pdf">{pdf}</a>
+<li>Video 143: <a href="https://youtu.be/xBcp0CXvRrw">Henderson’s equations</a> [Shreeja Bhakat](Oct 28)<a href="trans/v143.pdf">{pdf}</a>
+<li>Video 144: <a href="https://youtu.be/eCewNuCjkVw">Preparing for R</a> [Reetanjan Kali Roychowdhury](Oct 31)<a href="trans/v144.pdf">{pdf}</a>
+<li>Video 145: <a href="https://youtu.be/gOeOH2HdTtI">Grouped data</a> [Anushka De](Oct 31)<a href="trans/v145.pdf">{pdf}</a>
+<li>Video 146: <a href="https://youtu.be/G_XYmOz-wkY">R syntax</a> [Samahriti Mukherjee](Oct 31)<a href="trans/v146.pdf">{pdf}</a>
+<li>Video 147: <a href="https://youtu.be/sct37HrcM3g">R lab: preparing data</a> [Sanku Bhaskara Rahul](Nov 1)<a href="trans/v147.pdf">{pdf}</a>
+<li>Video 148: <a href="https://youtu.be/fgTg0PI6w-k">R lab: Fitting</a> [Souvik Roy](Nov 1)<a href="trans/v148.pdf">{pdf}</a>
+<li>Video 149: <a href="https://youtu.be/oVIkaBk4t94">Parametric bootstrap</a> [Progyan Sarkar](Nov 1)<a href="trans/v149.pdf">{pdf}</a>
+<li>Video 150: <a href="https://youtu.be/DZMEIrk_z_E">Exception 1</a> [Rahul Debnath](Nov 2)<a href="trans/v150.pdf">{pdf}</a>
+<li>Video 151: <a href="https://youtu.be/VEaCspDF0DY">Exception 2</a> [Arka Sinha](Nov 2)<a href="trans/v151.pdf">{pdf}</a>
+<li>Video 152: <a href="https://youtu.be/ElD9d5O7lzo">Exception 3</a> [Manas Patnayakuni](Nov 2)<a href="trans/v152.pdf">{pdf}</a>
+<h3> Generalised Linear Models </h3><li>Video 153: <a href="https://youtu.be/rP6-blNNVAs">Math formulation</a> [Yash Maurya](Nov 3)<!a href="trans/v153.pdf">{pdf}</a>
+<li>Video 154: <a href="https://youtu.be/dsLp4yE_zoY">R lab</a> [Rishi Dey Chowdhury](Nov 3)<!a href="trans/v154.pdf">{pdf}</a>
 </body></html>
