--- a/lm2022/news.html
+++ b/lm2022/news.html
@@ -2,6 +2,12 @@
 <body>
 <table border="1">
 <tr>
+ <th>Nov 21: </th><td>All student-pdfs uploaded for the videos
+ in the <a target="naya" href="videos.html">videos page</a>.
+                     </td>
+</tr>
+
+<tr>
  <th>Aug 30: </th><td>Downloadable data sets added after
  videos using them  in the <a target="naya" href="videos.html">videos page</a>.
                      </td>
