--- a/lm2022/ex4.html
+++ b/lm2022/ex4.html
@@ -228,6 +228,12 @@ the $MS$ values.</li>
 <fieldset>
 <legend><b></b></legend><img width="80%" src="image/jsmixed4.png"></fieldset>
 </center>
+This problem refers to model (8.3.2) which is 
+<center>
+<fieldset>
+<legend><b></b></legend><img width="80%" src="image/8321.png"></fieldset>
+</center>
+Also, here ${\bf p}$ is any arbitrary fixed known vector. 
 </li>
 
 
