--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -25,11 +25,11 @@ subset of the information present in the videos.
 <li>Video 4: <a href="https://youtu.be/U6Jb_p7wIc8">Normal equations</a> [Reetanjan Kali Roychowdhury](Aug 11)<a href="trans/v4.pdf">{pdf}</a>
 <li>Video 5: <a href="https://youtu.be/R51kf-ojMBE">Using lm() in R</a> [Ishan Paul](Aug 11)<a href="trans/v5.pdf">{pdf}</a>
 <li>Video 6: <a href="https://youtu.be/pNx5UI4SNvs">Directly working with normal equations in R</a> [Arunsoumya Basu](Aug 12)<a href="trans/v6.pdf">{pdf}</a>
-<h3> R workflow </h3><li>Video 7: <a href="https://youtu.be/uOhldkMnTO0">Preparation</a> [Sanskar Lalwani](Aug 12)<a href="trans/v7.pdf">{pdf}</a>
+<h3> R workflow </h3><li>Video 7: <a href="https://youtu.be/uOhldkMnTO0">Preparation</a> [Sanskar Lalwani](Aug 12)<a href="trans/v7.pdf">{pdf}*</a>
 <li>Video 8: <a href="https://youtu.be/hJwb5sHXhMQ">Installing and loading the faraway package</a> [Reetanjan Kali Roychowdhury](Aug 12)<a href="trans/v8.pdf">{pdf}</a>
 <li>Video 9: <a href="https://youtu.be/GtFZTerEwSw">Some basic R commands to work with data</a> [Rajarshi Biswas](Aug 15)<a href="trans/v9.pdf">{pdf}</a>
 <li>Video 10: <a href="https://youtu.be/N5gSXlGv-cM">Plotting in R</a> [Manas Patnayakuni](Aug 15)<a href="trans/v10.pdf">{pdf}</a>
-<li>Video 11: <a href="https://youtu.be/XCzZunWi-vw">Factors in R</a> [Sirsha Dey](Aug 15)<a href="trans/v11.pdf">{pdf}</a>
+<li>Video 11: <a href="https://youtu.be/XCzZunWi-vw">Factors in R</a> [Sirsha Dey](Aug 15)<a href="trans/v11.pdf">{pdf}*</a>
 <h3> Some important concepts </h3><li>Video 12: <a href="https://youtu.be/JjwCzI8g5mw">Spring example: blackbox diagram</a> [Vaibhav Makarand Sherkar](Aug 16)<a href="trans/v12.pdf">{pdf}</a>
 <li>Video 13: <a href="https://youtu.be/egE0F7XvChA">Factor, covariate, ANOVA, regression, ANCOVA</a> [Souvik Roy](Aug 16)<a href="trans/v13.pdf">{pdf}</a>
 <li>Video 14: <a href="https://youtu.be/dNjHhc4Tm60">Control, treatment, designed expt, obsvl study</a> [Debabrata Sarkar](Aug 16)<a href="trans/v14.pdf">{pdf}</a>
@@ -38,11 +38,11 @@ subset of the information present in the videos.
 <li>Video 17: <a href="https://youtu.be/Xq43Y0pfzpc">CSV format, working directory, exploring data</a> [Sanku Bhaskara Rahul](Aug 17)<a href="trans/v17.pdf">{pdf}</a>
 <li>Video 18: <a href="https://youtu.be/JRcW7oy9_b0">Using R</a> [Pranav Nair](Aug 18)<a href="trans/v18.pdf">{pdf}</a>
 <li>Video 19: <a href="https://youtu.be/rAFA0ozQ28M">List of important steps</a> [Reetanjan Kali Roychowdhury](Aug 18)<a href="trans/v19.pdf">{pdf}</a>
-<blockquote><a href="ex1.html">Practice problem set 1</a></blockquote><h3> Second detailed example </h3><li>Video 20: <a href="https://youtu.be/a471E-zFCUE">Quadratic regression, I() notation</a> [Yakshith Naidu](Aug 18)<a href="trans/v20.pdf">{pdf}</a>
+<blockquote><a href="ex1.html">Practice problem set 1</a></blockquote><h3> Second detailed example </h3><li>Video 20: <a href="https://youtu.be/a471E-zFCUE">Quadratic regression, I() notation</a> [Yakshith Naidu](Aug 18)<a href="trans/v20.pdf">{pdf}*</a>
 <li>Video 21: <a href="https://youtu.be/7l6BGOtzfwk">Quadratic
 regression in R</a> <a href="data/spring.csv">(data)</a> [Yash Maurya](Aug 19)<a href="trans/v21.pdf">{pdf}</a>
 <h3> Third detailed example </h3><li>Video 22: <a href="https://youtu.be/W1xSO94h5rg">Another spring example: control input</a> [Rajarshi Biswas](Aug 19)<a href="trans/v22.pdf">{pdf}</a>
-<li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)<a href="trans/v23.pdf">{pdf}</a>
+<li>Video 23: <a href="https://youtu.be/xQ3S4BQ9pHs">Data layout, subscripts</a> [Yakshith Naidu](Aug 19)<a href="trans/v23.pdf">{pdf}*</a>
 <li>Video 24: <a href="https://youtu.be/OWhOeSS4cC4">Data merging
 in R</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Rishi Dey Chowdhury](Aug 22)<a href="trans/v24.pdf">{pdf}</a>
 <li>Video 25: <a href="https://youtu.be/KCuhpniBKpc">Class, factor, plot</a> <a href="data/spring1.csv">(data1</a>, <a href="data/spring2.csv">data2)</a> [Tarun Agarwal](Aug 22)<a href="trans/v25.pdf">{pdf}</a>
@@ -60,7 +60,7 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 34: <a href="https://youtu.be/rQEkZJdSEsI">Proof</a> [Arghya Sarkar](Aug 25)<a href="trans/v34.pdf">{pdf}</a>
 <li>Video 35: <a href="https://youtu.be/UBgyq4pfonA">Identifiability</a> [Nithya Dev Allamneni](Aug 25)<a href="trans/v35.pdf">{pdf}</a>
 <li>Video 36: <a href="https://youtu.be/jNWZ2YUUNzM">Estimability</a> [Arunav Bhowmick](Aug 26)<a href="trans/v36.pdf">{pdf}</a>
-<li>Video 37: <a href="https://youtu.be/6wN-QFYy7rU">General GM theorem</a> [Arghya Sarkar](Aug 26)<a href="trans/v37.pdf">{pdf}</a>
+<li>Video 37: <a href="https://youtu.be/6wN-QFYy7rU">General GM theorem</a> [Arghya Sarkar](Aug 26)<a href="trans/v37.pdf">{pdf}*</a>
 <li>Video 38: <a href="https://youtu.be/G7WEFQCLpC0">Estimating sigma^2</a> [Saptarshi Sinha](Aug 26)<a href="trans/v38.pdf">{pdf}</a>[<a href="nminusr.html">Further discussion</a>]
 <li>Video 39: <a href="https://youtu.be/Zq1Cl35AYCM">Departures from GM set up</a> [Srikar Babu Pilli](Aug 29)<a href="trans/v39.pdf">{pdf}</a>
 <blockquote><a href="ex3.html">Practice problem set 3</a></blockquote>
@@ -85,17 +85,17 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 58: <a href="https://youtu.be/22mJ8xkGuMM">lm() in R.</a> <a href="data/lec16data.csv">(data)</a> [Avinandan Roy](Sep 6)<a href="trans/v58.pdf">{pdf}</a>
 <h3> More terminology </h3><li>Video 59: <a href="https://youtu.be/2ln6OIbTDmE">Control, placebo, blind, double blind</a> [Sounak Das](Sep 6)<a href="trans/v59.pdf">{pdf}</a>
 <li>Video 60: <a href="https://youtu.be/03XFSeJ5KKI">Confounding</a> [Srikar Babu Pilli](Sep 7)<a href="trans/v60.pdf">{pdf}</a>
-<li>Video 61: <a href="https://youtu.be/cgP4eXpHmEk">Blocking</a> [Samprit Chakraborty](Sep 7)<a href="trans/v61.pdf">{pdf}</a>
+<li>Video 61: <a href="https://youtu.be/cgP4eXpHmEk">Blocking</a> [Samprit Chakraborty](Sep 7)<a href="trans/v61.pdf">{pdf}*</a>
 <li>Video 62: <a href="https://youtu.be/ICBimmpQMlY">Randomisation</a> [Vaibhav Makarand Sherkar](Sep 7)<a href="trans/v62.pdf">{pdf}</a>
 <li>Video 63: <a href="https://youtu.be/dETYabm-bXg">Design of experiments</a> [Pranav Nair](Sep 8)<a href="trans/v63.pdf">{pdf}</a>
 <h3> Residuals </h3><li>Video 64: <a href="https://youtu.be/K8MWExEBAno">Introduction</a> [Samahriti Mukherjee](Sep 8)<a href="trans/v64.pdf">{pdf}</a>
-<li>Video 65: <a href="https://youtu.be/miqGHsX8rjQ">Set up</a> [Sirsha Dey](Sep 8)<a href="trans/v65.pdf">{pdf}</a>
+<li>Video 65: <a href="https://youtu.be/miqGHsX8rjQ">Set up</a> [Sirsha Dey](Sep 8)<a href="trans/v65.pdf">{pdf}*</a>
 <h3> Hypotheses testing </h3><li>Video 66: <a href="https://youtu.be/BlkE4uNwNOI">Motivation through an example</a> [Progyan Sarkar](Sep 9)<a href="trans/v66.pdf">{pdf}</a>
 <li>Video 67: <a href="https://youtu.be/oJfGMvNM7Vg">General subspace idea</a> [Arunav Bhowmick](Sep 9)<a href="trans/v67.pdf">{pdf}</a>
 <li>Video 68: <a href="https://youtu.be/IIpuhRRBJyc">Pictorially approaching the test statistic</a> [Prisha Reddy Bobbili](Sep 9)<a href="trans/v68.pdf">{pdf}</a>
 <li>Video 69: <a href="https://youtu.be/cdV00VbDEuw">Mathematics</a> [Pranay Samadder](Sep 26)<a href="trans/v69.pdf">{pdf}</a>
 <h3> ANOVA table </h3><li>Video 70: <a href="https://youtu.be/nVuSozkiWh0">Number line example</a> [Mrinmoy Banik](Sep 26)<a href="trans/v70.pdf">{pdf}</a>
-<li>Video 71: <a href="https://youtu.be/4SXB8MCzgvg">Algebraic identity</a> [Samprit Chakraborty](Sep 26)<a href="trans/v71.pdf">{pdf}</a>
+<li>Video 71: <a href="https://youtu.be/4SXB8MCzgvg">Algebraic identity</a> [Samprit Chakraborty](Sep 26)<a href="trans/v71.pdf">{pdf}*</a>
 <li>Video 72: <a href="https://youtu.be/06YnRfEj0ao">Interpretation</a> [Rajarshi Biswas](Sep 27)<a href="trans/v72.pdf">{pdf}</a>
 <h3> Mixed effects models </h3><li>Video 73: <a href="https://youtu.be/JFcxHTHHcRE">Motivation</a> [Prisha Reddy Bobbili](Sep 27)<a href="trans/v73.pdf">{pdf}</a>
 <li>Video 74: <a href="https://youtu.be/_6VUAbs73lk">Random effect</a> [Rahul Debnath](Sep 27)<a href="trans/v74.pdf">{pdf}</a>
@@ -103,17 +103,17 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 76: <a href="https://youtu.be/Vb_BfPsIUAU">Tablet example</a> [Sanskar Lalwani](Sep 28)<a href="trans/v76.pdf">{pdf}</a>
 <blockquote><a href="ex4.html">Practice problem set 4</a></blockquote>
 <h3> Generalised Linear Models </h3><li>Video 77: <a href="https://youtu.be/CNljs3rGfzg">Probit problem</a> [Rishi Dey Chowdhury](Sep 28)<a href="trans/v77.pdf">{pdf}</a>
-<li>Video 78: <a href="https://youtu.be/aH5xuN46ovM">Probit solution</a> [Shreeja Bhakat](Sep 29)<a href="trans/v78.pdf">{pdf}</a>
+<li>Video 78: <a href="https://youtu.be/aH5xuN46ovM">Probit solution</a> [Shreeja Bhakat](Sep 29)<a href="trans/v78.pdf">{pdf}*</a>
 <li>Video 79: <a href="https://youtu.be/kwwTsfZvP_o">Social impact</a> [Valay Ashish Shah](Sep 29)<a href="trans/v79.pdf">{pdf}</a>
 <li>Video 80: <a href="https://youtu.be/YUyXRcuseU0">Probit in R</a> [Tarun Agarwal](Sep 29)<a href="trans/v80.pdf">{pdf}</a>
 <h3> Normal equations </h3><li>Video 81: <a href="https://youtu.be/HpBL4AkQUcg">Consistency of normal equations</a> [Shibendra Kumar Singh](Sep 30)<a href="trans/v81.pdf">{pdf}</a>
-<h3> Gauss-Markov model </h3><li>Video 82: <a href="https://youtu.be/30GDLF3vJpE">Use of ONB</a> [Sirsha Dey](Sep 30)<a href="trans/v82.pdf">{pdf}</a>
+<h3> Gauss-Markov model </h3><li>Video 82: <a href="https://youtu.be/30GDLF3vJpE">Use of ONB</a> [Sirsha Dey](Sep 30)<a href="trans/v82.pdf">{pdf}*</a>
 <li>Video 83: <a href="https://youtu.be/pgGNwhPa3GU">Proof of GM</a> [Arka Sinha](Sep 30)<a href="trans/v83.pdf">{pdf}</a>
 <li>Video 84: <a href="https://youtu.be/iejNxAhkPOc">UMVUE of sigma^2</a> [Avinandan Roy](Oct 3)<a href="trans/v84.pdf">{pdf}</a>
 <h3> Residuals </h3><li>Video 85*: <a href="https://youtu.be/krTAqkcpAvY">Extra contribution of a part</a> [Samahriti Mukherjee](Oct 3)<a href="trans/v85.pdf">{pdf}</a>
 <li>Video 86: <a href="https://youtu.be/M-BY2mVV2Rg">R^2</a> [Abhisek Maiti](Oct 3)<a href="trans/v86.pdf">{pdf}</a>
 <li>Video 87: <a href="https://youtu.be/oFXJcjOg2JU">Problem with R^2</a> [Yakshith Naidu](Oct 4)<!a href="trans/v87.pdf">{pdf}</a>
-<li>Video 88: <a href="https://youtu.be/NHST-e6kBzU">Adjusted R^2</a> [Shreeja Bhakat](Oct 4)<a href="trans/v88.pdf">{pdf}</a>
+<li>Video 88: <a href="https://youtu.be/NHST-e6kBzU">Adjusted R^2</a> [Shreeja Bhakat](Oct 4)<a href="trans/v88.pdf">{pdf}*</a>
 <h3> Hypotheses testing </h3><li>Video 89: <a href="https://youtu.be/kvN7RhF36qw">Recap of hyp4</a> [Mrinmoy Banik](Oct 4)<a href="trans/v89.pdf">{pdf}</a>
 <li>Video 90: <a href="https://youtu.be/6CWV9nvL1Ko">LRT in general</a> [Semanti Dutta](Oct 5)<a href="trans/v90.pdf">{pdf}</a>
 <li>Video 91*: <a href="https://youtu.be/uRT3HwlAyK0">LRT for linearm models</a> [Pranav Nair](Oct 5)<a href="trans/v91.pdf">{pdf}</a>
@@ -128,10 +128,10 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 100: <a href="https://youtu.be/Qk7ncpLrJtI">Geometry</a> [Arunav Bhowmick](Oct 10)<a href="trans/v100.pdf">{pdf}</a>
 <li>Video 101: <a href="https://youtu.be/IfCYB6M1Wvo">ANOVA table</a> [Aytijhya Saha](Oct 10)<a href="trans/v101.pdf">{pdf}</a>
 <li>Video 102*: <a href="https://youtu.be/IFCX1X1oNZQ">Why care?</a> [Prisha Reddy Bobbili](Oct 11)<a href="trans/v102.pdf">{pdf}</a>
-<h3> Multiple comparison </h3><li>Video 103: <a href="https://youtu.be/zu3fjvrECmw">False Discovery rate</a> [Sounak Das](Oct 11)<a href="trans/v103.pdf">{pdf}</a>
+<h3> Multiple comparison </h3><li>Video 103: <a href="https://youtu.be/zu3fjvrECmw">False Discovery rate</a> [Sounak Das](Oct 11)<a href="trans/v103.pdf">{pdf}*</a>
 <li>Video 104: <a href="https://youtu.be/UuDBf-MH04w">A simple example</a> [Samahriti Mukherjee](Oct 11)<a href="trans/v104.pdf">{pdf}</a>
 <li>Video 105: <a href="https://youtu.be/aVl6ff-Y7HQ">Bonferroni</a> [Rishi Dey Chowdhury](Oct 12)<a href="trans/v105.pdf">{pdf}</a>
-<li>Video 106: <a href="https://youtu.be/ZaGd3n7v7v4">Fisher’s LSD</a> [Shreeja Bhakat](Oct 12)<a href="trans/v106.pdf">{pdf}</a>
+<li>Video 106: <a href="https://youtu.be/ZaGd3n7v7v4">Fisher’s LSD</a> [Shreeja Bhakat](Oct 12)<a href="trans/v106.pdf">{pdf}*</a>
 <li>Video 107: <a href="https://youtu.be/9HPpocRAoBY">Tukey’s HSD</a> [Mrinmoy Banik](Oct 12)<a href="trans/v107.pdf">{pdf}</a>
 <li>Video 108: <a href="https://youtu.be/_u4boeiRVRA">Fisher’s LSD in R</a> [Nithya Dev Allamneni](Oct 13)<a href="trans/v108.pdf">{pdf}</a>
 <li>Video 109: <a href="https://youtu.be/IfeL-cX7VTs">Bonferroni in R</a> [Anushka De](Oct 13)<a href="trans/v109.pdf">{pdf}</a>
@@ -151,16 +151,16 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 123: <a href="https://youtu.be/AGnwLnZMVTY">DFFIT(S), COVFIT</a> [Shibendra Kumar Singh](Oct 20)<a href="trans/v123.pdf">{pdf}</a>
 <li>Video 124: <a href="https://youtu.be/07EuVs9zTsY">RSTUDENT</a> [Arnab Modak](Oct 20)<!a href="trans/v124.pdf">{pdf}</a>
 <blockquote><a href="bkw20_52.pdf">Some reference material from the book by Belsley, Kuh and Welsch</a></blockquote>
-<li>Video 125: <a href="https://youtu.be/IA6-c0dBBg0">Preparation for R</a> [Ritam Dey](Oct 20)<a href="trans/v125.pdf">{pdf}</a>
+<li>Video 125: <a href="https://youtu.be/IA6-c0dBBg0">Preparation for R</a> [Ritam Dey](Oct 20)<a href="trans/v125.pdf">{pdf}*</a>
 <li>Video 126: <a href="https://youtu.be/nqRq5Lmw16k">R lab</a> [Rahul Debnath](Oct 21)<a href="trans/v126.pdf">{pdf}</a>
 <li>Video 127: <a href="https://youtu.be/6ufkigOqmlU">Cook’s distance</a> [Souvik Roy](Oct 21)<a href="trans/v127.pdf">{pdf}</a>
 <li>Video 128: <a href="https://youtu.be/mFL8giveL1c">R lab</a> [Pranay Samadder](Oct 21)<a href="trans/v128.pdf">{pdf}</a>
 <h3> Multicollinearity </h3>
-<li>Video 129: <a href="https://youtu.be/OdU9-C9O38g">Introduction</a> [Sirsha Dey](Oct 24)<a href="trans/v129.pdf">{pdf}</a>
+<li>Video 129: <a href="https://youtu.be/OdU9-C9O38g">Introduction</a> [Sirsha Dey](Oct 24)<a href="trans/v129.pdf">{pdf}*</a>
 <li>Video 130: <a href="https://youtu.be/N-BdQ-z6ftE">Subset selection</a> [Sanku Bhaskara Rahul](Oct 24)<a href="trans/v130.pdf">{pdf}</a>
 <li>Video 131: <a href="https://youtu.be/FX8fR10obBc">Ridge regression</a> [Ishan Paul](Oct 24)<a href="trans/v131.pdf">{pdf}</a>
 <li>Video 132: <a href="https://youtu.be/PyIv14Jlk5k">Ridge: ad hoc and Bayes</a> [Manas Patnayakuni](Oct 25)<a href="trans/v132.pdf">{pdf}</a>
-<li>Video 133: <a href="https://youtu.be/B8vREv2XIFk">Ridge: soft and hard bounds</a> [Samprit Chakraborty](Oct 25)<a href="trans/v133.pdf">{pdf}</a>
+<li>Video 133: <a href="https://youtu.be/B8vREv2XIFk">Ridge: soft and hard bounds</a> [Samprit Chakraborty](Oct 25)<a href="trans/v133.pdf">{pdf}*</a>
 <li>Video 134: <a href="https://youtu.be/W1xbD0UF2Xc">Lasso</a> [Arghya Sarkar](Oct 25)<a href="trans/v134.pdf">{pdf}</a>
 <li>Video 135: <a href="https://youtu.be/Gmm39agaJRs">R lab: Creating data</a> [Saptarshi Sinha](Oct 26)<a href="trans/v135.pdf">{pdf}</a>
 <li>Video 136: <a href="https://youtu.be/D57pw4r0WSY">R lab: lars()</a> [Rahul Debnath](Oct 26)<a href="trans/v136.pdf">{pdf}</a>
@@ -170,7 +170,7 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <h3> Mixed Effects Models </h3><li>Video 140: <a href="https://youtu.be/nwEigrKbTzw">Hypotheses testing</a> [Prisha Reddy Bobbili](Oct 27)<a href="trans/v140.pdf">{pdf}</a>
 <li>Video 141: <a href="https://youtu.be/d0eypo48gZA">Bootstrapping</a> [Abhisek Maiti](Oct 28)<a href="trans/v141.pdf">{pdf}</a>
 <li>Video 142: <a href="https://youtu.be/H-fZRIlB98c">BLUP</a> [Tarun Agarwal](Oct 28)<a href="trans/v142.pdf">{pdf}</a>
-<li>Video 143: <a href="https://youtu.be/xBcp0CXvRrw">Henderson’s equations</a> [Shreeja Bhakat](Oct 28)<a href="trans/v143.pdf">{pdf}</a>
+<li>Video 143: <a href="https://youtu.be/xBcp0CXvRrw">Henderson’s equations</a> [Shreeja Bhakat](Oct 28)<a href="trans/v143.pdf">{pdf}*</a>
 <li>Video 144: <a href="https://youtu.be/eCewNuCjkVw">Preparing for R</a> [Reetanjan Kali Roychowdhury](Oct 31)<a href="trans/v144.pdf">{pdf}</a>
 <li>Video 145: <a href="https://youtu.be/gOeOH2HdTtI">Grouped data</a> [Anushka De](Oct 31)<a href="trans/v145.pdf">{pdf}</a>
 <li>Video 146: <a href="https://youtu.be/G_XYmOz-wkY">R syntax</a> [Samahriti Mukherjee](Oct 31)<a href="trans/v146.pdf">{pdf}</a>
