--- a/lm2022/videos.html
+++ b/lm2022/videos.html
@@ -180,6 +180,6 @@ statistical assumptions</a> [Valay Ashish Shah](Aug 23)<a href="trans/v28.pdf">{
 <li>Video 150: <a href="https://youtu.be/DZMEIrk_z_E">Exception 1</a> [Rahul Debnath](Nov 2)<a href="trans/v150.pdf">{pdf}</a>
 <li>Video 151: <a href="https://youtu.be/VEaCspDF0DY">Exception 2</a> [Arka Sinha](Nov 2)<a href="trans/v151.pdf">{pdf}</a>
 <li>Video 152: <a href="https://youtu.be/ElD9d5O7lzo">Exception 3</a> [Manas Patnayakuni](Nov 2)<a href="trans/v152.pdf">{pdf}</a>
-<h3> Generalised Linear Models </h3><li>Video 153: <a href="https://youtu.be/rP6-blNNVAs">Math formulation</a> [Yash Maurya](Nov 3)<!a href="trans/v153.pdf">{pdf}</a>
-<li>Video 154: <a href="https://youtu.be/dsLp4yE_zoY">R lab</a> [Rishi Dey Chowdhury](Nov 3)<!a href="trans/v154.pdf">{pdf}</a>
+<h3> Generalised Linear Models </h3><li>Video 153: <a href="https://youtu.be/rP6-blNNVAs">Math formulation</a> [Yash Maurya](Nov 3)<a href="trans/v153.pdf">{pdf}</a>
+<li>Video 154: <a href="https://youtu.be/dsLp4yE_zoY">R lab</a> [Rishi Dey Chowdhury](Nov 3)<a href="trans/v154.pdf">{pdf}</a>
 </body></html>
