--- a/mult/graph.html
+++ b/mult/graph.html
@@ -139,6 +139,7 @@ function myFunction() {
 <h1><a
 name="Chapter 1, Day 1">Chapter 1, Day 1</a></h1>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+কিছু $f:{\mathbb R}^2\rightarrow{\mathbb R}$   যাদের গ্রাফ সহজে কল্পনা করা যায়৷ Constant, extrusion., revolution.    
 <hr/>
 <table width="100%" border="0">
 <tr>
