--- a/mult/card.html
+++ b/mult/card.html
@@ -132,13 +132,14 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Chapter 1, Day 1">Chapter 1, Day 1</a>
+<a href="#Chapter 7, Day 38">Chapter 7, Day 38</a>
 </li>
 </ul>
 <hr/>
 <h1><a
-name="Chapter 1, Day 1">Chapter 1, Day 1</a></h1>
+name="Chapter 7, Day 38">Chapter 7, Day 38</a></h1>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+বরফের মধ্যে কার্ড বসিয়ে সোজা করা৷ 
 <hr/>
 <table width="100%" border="0">
 <tr>
