--- a/mult/lax.html
+++ b/mult/lax.html
@@ -132,13 +132,15 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Chapter 1, Day 1">Chapter 1, Day 1</a>
+<a href="#Chapter 3, Day 17">Chapter 3, Day 17</a>
 </li>
 </ul>
 <hr/>
 <h1><a
-name="Chapter 1, Day 1">Chapter 1, Day 1</a></h1>
+name="Chapter 3, Day 17">Chapter 3, Day 17</a></h1>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+দুটো mixed partial derivative  কেন সাধরণতঃ সমান হয়, তাই নিয়ে Lax-এর বইয়ের ভিত্তিতে তৈরী 
+ভিডিও৷ 
 <hr/>
 <table width="100%" border="0">
 <tr>
