--- a/mult/proof.html
+++ b/mult/proof.html
@@ -138,7 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 1, Day 2">Chapter 1, Day 2</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/imF4bMTuhBI" title="How to write a proof." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 কী করে প্রমাণ লিখতে হয়৷
 <hr/>
 <table width="100%" border="0">
