--- a/mult/index.html
+++ b/mult/index.html
@@ -139,7 +139,7 @@ function myFunction() {
 <h1><a
 name="Multivariable Calculus">Multivariable Calculus</a></h1>
 এইটা আমার Multivariable Calculus  বইয়ের ওয়েবপেজ৷ ভুলত্রুটি যা বেরোবে, এখানে তার
- তালিকা থাকবে৷ বইয়ের যেখানে functional independence-এর আলোচনা ছিল, সেখানে একটা
+ তালিকা থাকবে৷ বইয়ের যেখানে functional dependence-এর আলোচনা ছিল, সেখানে একটা
  পেপারের কথা বলেছিলাম৷ সেটা <a href="WFNewns.pdf">এখান থেকে ডাউনলোড করতে পারো</a>৷  
 <p></p>
 
