--- a/mult/card.html
+++ b/mult/card.html
@@ -138,7 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 7, Day 38">Chapter 7, Day 38</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/rgSyiqTE3wY" title="card" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 বরফের মধ্যে কার্ড বসিয়ে সোজা করা৷ 
 <hr/>
 <table width="100%" border="0">
