--- a/mult/cyl.html
+++ b/mult/cyl.html
@@ -138,8 +138,9 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 7, Day 41">Chapter 7, Day 41</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-Cylinder-এর দুরকম general  সংজ্ঞা--extrusion  দিয়ে, আর
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/5iBuYy8nKhg" title="Two general definitions of cylinders" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+Cylinder-এর দুরকম general  সংজ্ঞা--টেনে 
+                                তোলা দিয়ে, আর
  generating line  দিয়ে৷ 
 <hr/>
 <table width="100%" border="0">
