--- a/mult/grad.html
+++ b/mult/grad.html
@@ -138,8 +138,8 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 2, Day 11">Chapter 2, Day 11</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-Gradient ascent-এর অ্যানিমেশন৷ 
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/SHfdPDPnVmM" title="Gradient ascent method" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+Gradient ascent method-এর সংক্ষিপ্ত আলোচনা৷ 
 <hr/>
 <table width="100%" border="0">
 <tr>
