--- a/mult/jac.html
+++ b/mult/jac.html
@@ -138,8 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 2, Day 10">Chapter 2, Day 10</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-ভূমিকম্প দিয়ে Jacobian  বোঝানো৷ পিঁপড়ে৷  
+এই video-টা শীঘ্রই আসবে৷ 
 <hr/>
 <table width="100%" border="0">
 <tr>
