--- a/mult/lax.html
+++ b/mult/lax.html
@@ -138,7 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 3, Day 17">Chapter 3, Day 17</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/pL57dlZwYKk" title="Equality of mixed partial derivatives" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 দুটো mixed partial derivative  কেন সাধরণতঃ সমান হয়, তাই নিয়ে Lax-এর বইয়ের ভিত্তিতে তৈরী 
 ভিডিও৷ 
 <hr/>
