--- a/mult/normal.html
+++ b/mult/normal.html
@@ -138,7 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 7, Day 43">Chapter 7, Day 43</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/JmN1twmz2eE" title="Understanding normal to a surface" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 Cross-product  দিয়ে surface-এর normal  বার করা৷ 
 <hr/>
 <table width="100%" border="0">
