--- a/mult/qf.html
+++ b/mult/qf.html
@@ -138,7 +138,7 @@ function myFunction() {
 <hr/>
 <h1><a
 name="Chapter 4, Day 21">Chapter 4, Day 21</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/2QLvT4V1iUQ" title="Quadratic forms" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 বিভিন্ন রকমের quadratic form-এর গ্রাফের প্রদর্শনী৷  
 <hr/>
 <table width="100%" border="0">
