--- a/mult/solrev.html
+++ b/mult/solrev.html
@@ -132,14 +132,14 @@ function myFunction() {
 <h3>Table of contents</h3>
 <ul>
 <li>
-<a href="#Chapter 1, Day 34">Chapter 1, Day 34</a>
+<a href="#Chapter 6, Day 34">Chapter 6, Day 34</a>
 </li>
 </ul>
 <hr/>
 <h1><a
-name="Chapter 1, Day 34">Chapter 1, Day 34</a></h1>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMBkNmnGtuA" title="চন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-বিভিন্ন solid of revolution.
+name="Chapter 6, Day 34">Chapter 6, Day 34</a></h1>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/WIPNElrPJHU" title="ষোলিদস ওফ রেভোলুতিওন" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+Solid of revolution-রা দেখতে কীরকম৷
 <hr/>
 <table width="100%" border="0">
 <tr>
