--- a/mult/riem.html
+++ b/mult/riem.html
@@ -141,6 +141,31 @@ name="Chapter 5, Day 29">Chapter 5, Day 29</a></h1>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/sE_R7xfvK8E" title="Riemann integration for double
 integrals" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 Double integral-দের বেলায় Riemann integration.
+<h3>মন্তব্য</h3>
+নীচে একটা মন্তব্য দেওয়ার জায়গা রয়েছে. দেখে মনে হবে যেন তার জন্য আগে log
+in করতে হবে. যদি তাতে আপত্তি থাকে, তবে ওই "Name"-এর জায়গায় একবার
+click করলেই "I'd rather post as a guest" বলে একটা option আসবে. 
+<p></p><!--
+begin disqus code --> <div id="disqus_thread"></div>
+<script>
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+var disqus_config = function () {
+this.page.url = "https://arnabc74.github.io/mult/riem.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = "riem"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://txtbk.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript><!-- end disqus code --> 
 <hr/>
 <table width="100%" border="0">
 <tr>
