--- a/mult/graph.html
+++ b/mult/graph.html
@@ -140,6 +140,9 @@ function myFunction() {
 name="Chapter 1, Day 1">Chapter 1, Day 1</a></h1>
 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/y37ubwA8-WE" title="Constant, extrusion, revolution." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 কিছু $f:{\mathbb R}^2\rightarrow{\mathbb R}$   যাদের গ্রাফ সহজে কল্পনা করা যায়৷ 
+<p></p>
+কুমোরের চাকের ভিডিওটা <a href="https://www.youtube.com/watch?v=P8styuac15I">এখানে</a>৷ 
+
 <h3>মন্তব্য</h3>
 নীচে একটা মন্তব্য দেওয়ার জায়গা রয়েছে. দেখে মনে হবে যেন তার জন্য আগে log
 in করতে হবে. যদি তাতে আপত্তি থাকে, তবে ওই "Name"-এর জায়গায় একবার
