--- a/sm4/freq.html
+++ b/sm4/freq.html
@@ -71,8 +71,8 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <style>
 body {
   margin: 0;
-  //background: #000;
-  //color: #ccc;
+  background: #000;
+  color: #fff;
 }
 
 
@@ -277,23 +277,27 @@ sun spot data.
 <font color="red">
 <pre>
 library(tuneR) #You may need to install it first.
-x = normalize(2*sine(440) + sine(340))
+#x = normalize(2*sine(440) + sine(340))
 x = normalize(2*sine(440,dur=88200) + sine(340,dur=88200))
 plot(x)
 setWavPlayer("aplay") #You may need to change this depending on your
                       #set up. You not even need this.
 play(x)
 z = fft(x@left)
+plot(abs(z),ty='l')
 plot(abs(z)[1:1000],ty='l')
 which(abs(z)&gt;5000)
+plot(sunspots,ty='l')
+z = fft(sunspots)
+plot(1:length(sunspots),abs(z),ty='l')
 </pre>
 </font> 
 
 <h2><a
 name="Removing noise">Removing noise</a></h2>
 When we want to filter out signal from noise, we look for some
-detectable characteristic wrt which the signal differes from
-signal. Freqeuncy often provides such a characteristic. <a href="noisy3.wav">Download
+detectable characteristic wrt which the signal differs from
+noise. Freqeuncy often provides such a characteristic. <a href="noisy3.wav">Download
 the audio file here.</a> 
 <font color="red">
 <pre>
