--- a/mult/index.html
+++ b/mult/index.html
@@ -71,6 +71,8 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <style>
 body {
   margin: 0;
+  //background: #000;
+  //color: #fff;
 }
 
 
@@ -134,6 +136,9 @@ function myFunction() {
 <li>
 <a href="#Multivariable Calculus">Multivariable Calculus</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#ভুল-ত্রুটি">ভুল-ত্রুটি</a>
+</li>
 </ul>
 <hr/>
 <h1><a
@@ -141,6 +146,23 @@ name="Multivariable Calculus">Multivariable Calculus</a></h1>
 এইটা আমার Multivariable Calculus  বইয়ের ওয়েবপেজ৷ ভুলত্রুটি যা বেরোবে, এখানে তার
  তালিকা থাকবে৷ বইয়ের যেখানে functional dependence-এর আলোচনা ছিল, সেখানে একটা
  পেপারের কথা বলেছিলাম৷ সেটা <a href="WFNewns.pdf">এখান থেকে ডাউনলোড করতে পারো</a>৷  
+<h2><a
+name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>  
+
+<ul>
+
+<li>
+<center>
+<fieldset>
+<legend><b>268  পাতার অংশ৷</b></legend><img width="80%" src="image/p268.png"></fieldset>
+</center>
+এখানে ওই লাল দিয়ে দেখানো
+ integral-টা $1$  থেকে $\infty$  পর্যন্ত হবে৷ ভুলটা পরের পাতাতেও
+ গড়িয়েছে৷ ভুলটা ধরেছেন জয়দীপ সেন৷
+</li>
+
+</ul>
+
 <p></p>
 
 <h3>মন্তব্য</h3>
