--- a/sm4/lrt.html
+++ b/sm4/lrt.html
@@ -71,6 +71,8 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <style>
 body {
   margin: 0;
+  //background: #000;
+  //color: #fff;
 }
 
 
@@ -165,6 +167,8 @@ The suprema are generally maxima, and are obtained by plugging
 appropriate MLEs of $\theta $ into the likelihood function.
 <p></p>
 
+
+
 The convergence is often rather poor in practice. But still LRT
 is quite popular. We shall see one example below.
 
@@ -202,7 +206,7 @@ Show that the general MLE for $B$ is $\hat B = PA
 ^{-1},$ where $P = YX'$ and $A =
 XX'$. Here $Y_{p\times n} = [\v y_1~~\cdots~~\v y_n]$ and 
 $X_{q\times n} = [\v x_1~~\cdots~~\v x_n].$
-<img src="../image/box.png"></p>
+</p>
 
 
 <p>
@@ -210,7 +214,7 @@ $X_{q\times n} = [\v x_1~~\cdots~~\v x_n].$
 Show that the general MLE for $\Sigma$ is $\hat \Sigma  = 
 \frac 1n \sum_i (\v y_i-\hat B\v x_i) (\v y_i-\hat B\v x_i)',$
 where $\hat B$ is as given in the  exercise above.
-<img src="../image/box.png"></p>
+</p>
 
 Next we look at the numerator, <i>i.e.</i>, the null MLE.
 
@@ -219,14 +223,14 @@ Next we look at the numerator, <i>i.e.</i>, the null MLE.
 Under $H_0,$ consider $\v z_i = \v y_i - C_0 \v u_i$ as
 our data. Suitably adapt the formula given in the first exercise
 above to obtain the null MLE of $D.$
-<img src="../image/box.png"></p>
+</p>
 
 
 <p>
 <b>EXERCISE:</b>&nbsp;
 Again consider the modified data as above, adapt the formula
 given in the second exercise to obtain the null MLE of $\Sigma.$
-<img src="../image/box.png"></p>
+</p>
 
 Finally we can create the test statistic.
 
@@ -234,7 +238,7 @@ Finally we can create the test statistic.
 <b>EXERCISE:</b>&nbsp;
 Use the results from the exercises above to construct the
 likelihood ratio statistic.
-<img src="../image/box.png"></p>
+</p>
 <hr/>
 <table width="100%" border="0">
 <tr>
