--- a/mult/index.html
+++ b/mult/index.html
@@ -161,6 +161,16 @@ name="ভুল-ত্রুটি">ভুল-ত্রুটি</a></h2>
  গড়িয়েছে৷ ভুলটা ধরেছেন জয়দীপ সেন৷
 </li>
 
+<li>
+<center>
+<fieldset>
+<legend><b>294  পাতার অংশ৷</b></legend><img width="80%" src="image/p294.png"></fieldset>
+</center>
+এখানে ওই লাল দিয়ে দেখানো
+ integral-টা হবে $\pi \int_{-1}^2 x^4\, dx.$  তাই উত্তরটা হবে $\frac{33\pi}{5}.$
+ভুলটা ধরেছেন জয়দীপ সেন৷
+</li>
+
 </ul>
 
 <p></p>
